# nmbx

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: convergence.py  convergence_param_opt.py
examples/convergence/: find_sigma_from_wlen.py  param_opt.py  param_study.py  visualize_std.py
src/nmbx/: convergence.py  utils.py
tests/: test_convergence.py
