[project]
name = "nmbx"
version = "0.0.0"
authors = [
    {name = "Steve Schmerler", email = "git@elcorto.com"}
]

##requires-python = ">=3.10"

dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.black]
line-length = 79

[build-system]
requires = ["setuptools>=66.1", "wheel"]
build-backend = "setuptools.build_meta"
