[project]
name = "nmbx"
version = "0.0.2"
authors = [
    {name = "Steve Schmerler", email = "git@elcorto.com"}
]

##requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
]


[project.optional-dependencies]
test = ["pytest"]
dev = ["pre-commit"]
examples = [ "matplotlib", "optuna"]


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79
lint.ignore = [
    "E731", # Do not assign a lambda expression, use a def
]


[tool.mypy]
ignore_missing_imports = true
implicit_optional = true

# Declare that package source is in src/. Prevent mypy from complaining that
# examples/convergence.py and src/nmbx/convergence.py have the same name. My
# god, that tool is picky!
explicit_package_bases = true
mypy_path = "./src"


[build-system]
requires = ["setuptools>=66.1", "wheel"]
build-backend = "setuptools.build_meta"
